# nuzum-edut

./: .cursorrules  .env.example  .env.local  .gitattributes  .gitignore  .hostinger_config.example.json  .htaccess  .htmlhintrc  .replit  ACCOUNTING_FINAL_REFACTORING_REPORT.md  ACCOUNTING_OPTIMIZATION_COMPLETE.txt  ACCOUNTING_REFACTORING_PROGRESS.md  API_ACCIDENT_REPORTS.md  API_QUICK_START.md  API_SETUP_GUIDE.md  API_SUMMARY.md  ATTENDANCE_ANALYSIS_REPORT.md  ATTENDANCE_COMPREHENSIVE_CHECKLIST.md  ATTENDANCE_DEPENDENCIES_RISKS.md  ATTENDANCE_DETAILED_MAP.md  AUDIT_REPORT_vehicle_routes.md  BACKREF_VERIFICATION_REPORT.md  BEFORE_AFTER_COMPARISON.md  CLEANUP_STATUS.txt  CLOUDPANEL_CURRENT_SETUP.md  CLOUDPANEL_DEPLOY.md  COMPLETION_SUMMARY.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  CURSOR_FLUTTER_API_REQUIREMENTS.md  CURSOR_PROMPT_INSPECTION_UPLOAD.md  DEPLOY_DIRECT_API.md  DEPLOY_SIMPLE.md  Dockerfile  ENHANCED_EXCEL_INTEGRATION_GUIDE.md  ENV_SETUP_GUIDE.md  EXCEL_REPORT_COMPLETION_SUMMARY.md  EXECUTIVE_SUMMARY_PHASE1.md  FILES_READY_FOR_GITHUB.md  FINAL_SUMMARY.md  (+262 more)
.github/: copilot-instructions.md
_graveyard_archive/: diagnostic_vehicle_blueprint.py  models_temp.py
application/: __init__.py
artifacts/: health_final.txt  scan_report.txt
backups/: NUZUM_Environment.postman_environment.json
config/: __init__.py  base.py
core/: __init__.py  app_factory.py  celery_app.py  context_processors.py  error_handlers.py  jinja_filters.py  scheduler.py
docs/: ACCOUNTING_DEVELOPMENT_STUDY.md  ACCOUNTING_DEVELOPMENT_STUDY_2026-02-27.md  API_DOCUMENTATION.md  DEPLOY_NOW.md  (+96 more)
(+2487 files in other folders)
